--- a/src/pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/telefonnummer/Telefonnummer.less
+++ b/src/pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/telefonnummer/Telefonnummer.less
@@ -36,17 +36,6 @@
       margin-right: 0.5rem;
     }
   }
-  &__submit {
-    @media @minDesktop {
-      margin: 2rem 0 1rem 0;
-    }
-    @media @maxTablet {
-      margin: 2rem 0 1rem 0;
-    }
-    @media @maxMobile {
-      margin: 1rem 0;
-    }
-  }
   &__knapper {
     display: flex;
     padding-top: 0.15rem;
@@ -59,8 +48,8 @@
     justify-content: center;
     align-items: center;
     padding: 0.275rem !important;
-    &:first-child {
-      margin-right: 0.25rem;
+    &:last-child {
+      margin-left: 0.25rem;
     }
     &-tekst {
       padding: 0 0.25rem;
