Liten endring på lagre-knapp

--- a/src/pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/telefonnummer/Telefonnummer.less
+++ b/src/pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/telefonnummer/Telefonnummer.less
@@ -38,7 +38,7 @@
   }
   &__knapper {
     display: flex;
-    padding-top: 0.15rem;
+    padding: 0.5rem 0;
     @media @maxMobile {
       flex-direction: column;
     }
