--- a/src/pages/forside/sections/4-personinfo/3-adresser/Adresser.less
+++ b/src/pages/forside/sections/4-personinfo/3-adresser/Adresser.less
@@ -15,7 +15,9 @@
   &__linje {
     width: 100%;
   }
-
+  &__form {
+    margin-top: 0.5rem;
+  }
   &__divider {
     padding: 0.5rem;
   }
@@ -41,6 +43,10 @@
     @media @minMobile {
       width: 50%;
     }
+  }
+  &__knapper {
+    margin: 1rem 0 1.5rem 0;
+    display: flex;
   }
   &__input-avstand {
     padding-right: 0.5rem;
