Redesign av utenlandsk adresse

--- a/src/pages/forside/sections/4-personinfo/4-utbetalinger/Utbetalinger.less
+++ b/src/pages/forside/sections/4-personinfo/4-utbetalinger/Utbetalinger.less
@@ -20,6 +20,9 @@
       }
     }
   }
+  &__bankidentifier {
+    margin: 2rem 0 1rem 0;
+  }
   &__knapper {
     display: flex;
     padding: 0.5rem 0;
@@ -32,7 +35,7 @@
     flex-wrap: wrap;
   }
   &__alert {
-    margin-bottom: 2rem;
+    padding: 0.5rem 0 1rem 0;
   }
   &__input-box {
     @media @minMobile {
