Fjern init values fra adresse

--- a/src/pages/forside/sections/4-personinfo/3-adresser/Adresser.less
+++ b/src/pages/forside/sections/4-personinfo/3-adresser/Adresser.less
@@ -48,6 +48,9 @@
     margin: 1rem 0 1.5rem 0;
     display: flex;
   }
+  &__knapp:last-child {
+    margin-left: 0.5rem;
+  }
   &__input-avstand {
     padding-right: 0.5rem;
   }
