--- a/src/pages/forside/sections/6-eksterne/EksterneLenker.less
+++ b/src/pages/forside/sections/6-eksterne/EksterneLenker.less
@@ -5,10 +5,10 @@
   }
   &__content {
     @media @minDesktop {
-      padding: 0 3rem 1rem 3rem;
+      padding: 1rem 3rem;
     }
     @media @maxMobile {
-      padding: 0 0 1.5rem 0;
+      padding: 1rem 0;
     }
   }
   &__info {
