--- a/src/pages/forside/sections/7-informasjon/MerInformasjon.less
+++ b/src/pages/forside/sections/7-informasjon/MerInformasjon.less
@@ -1,7 +1,10 @@
 .mi {
   &__content {
     @media @minDesktop {
-      padding: 0 3rem 1rem 3rem;
+      padding: 1rem 3rem;
+    }
+    @media @maxDesktop {
+      padding: 1rem 0rem;
     }
     display: flex;
     flex-direction: column;
