Justeringer av design

--- a/src/pages/forside/sections/6-eksterne/EksterneLenker.less
+++ b/src/pages/forside/sections/6-eksterne/EksterneLenker.less
@@ -3,6 +3,12 @@
     margin: 4rem 0;
     padding: 2rem 1.5rem !important;
   }
+  &__overskrift {
+    padding: 1rem 0;
+  }
+  &__info {
+    margin-bottom: 1rem;
+  }
   &__content {
     @media @minDesktop {
       padding: 1rem 3rem;
@@ -10,8 +16,5 @@
     @media @maxMobile {
       padding: 1rem 0;
     }
-  }
-  &__info {
-    margin: 1rem 0 2rem 0;
   }
 }
