--- a/src/pages/forside/sections/6-eksterne/linkbox/LinkBox.less
+++ b/src/pages/forside/sections/6-eksterne/linkbox/LinkBox.less
@@ -6,13 +6,13 @@
   &__rad {
     display: flex;
     padding: 1rem 0;
-    border-top: 1px solid #979797;
+    border-bottom: 1px solid #979797;
     align-items: center;
     text-decoration: none;
     color: black;
 
     &:last-child {
-      border-bottom: 1px solid #979797;
+      border-bottom: 0;
     }
   }
 
