--- a/src/pages/forside/sections/7-informasjon/MerInformasjon.less
+++ b/src/pages/forside/sections/7-informasjon/MerInformasjon.less
@@ -10,32 +10,27 @@
     flex-direction: column;
   }
 
-  &__line {
-    border: none;
-    border-top: 1px solid;
-    background: none;
-    height: 0;
-    width: 100%;
-    margin: 0;
-  }
-
   &__button {
+    display: flex;
+    justify-content: left;
+    text-align: left;
     background: none;
-    border: none;
+    border: 0;
     padding: 1rem 0;
     width: 100%;
+    border-bottom: 1px solid @navGra60;
     &:focus {
       background: @fokusFarge;
       .mi__lenke {
         color: white;
       }
     }
-    display: flex;
-    justify-content: left;
-    text-align: left;
+    &:last-child {
+      border-bottom: 0;
+    }
   }
 
   &__overskrift {
-    margin-bottom: 2rem;
+    margin: 1rem 0;
   }
 }
