Redesign / justeringer med Wei

--- a/src/pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/telefonnummer/Telefonnummer.less
+++ b/src/pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/telefonnummer/Telefonnummer.less
@@ -1,10 +1,17 @@
 .tlfnummer {
   &__rad,
   &__rad-leggtil {
-    padding: 0.75rem 0;
+    padding: 0.5rem 0;
   }
   &__rad {
     border-bottom: 1px solid #c6c2bf;
+  }
+  &__leggtil {
+    padding-left: 0;
+    margin: 0.5rem 0;
+    align-items: center;
+    display: flex;
+    border: 0;
   }
   &__divider {
     height: 1px;
