--- a/src/App.less
+++ b/src/App.less
@@ -38,7 +38,7 @@ body {
     padding: 0.5rem 0;
   }
   &__beskrivelse {
-    padding: 0.5rem 0;
+    padding-bottom: 0.5rem;
   }
   &__divider {
     padding-top: 2.5rem;
