Flytt utenlandsk-kontonummer-forms i egne filer

--- a/src/pages/forside/sections/4-personinfo/4-utbetalinger/Utbetalinger.less
+++ b/src/pages/forside/sections/4-personinfo/4-utbetalinger/Utbetalinger.less
@@ -20,8 +20,11 @@
       }
     }
   }
-  &__bankidentifier {
+  &__bank-identifier {
     margin: 1rem 0;
+  }
+  &__bic-bankkode {
+    padding: 1.5rem 0;
   }
   &__knapper {
     display: flex;
