--- a/src/pages/forside/sections/4-personinfo/3-adresser/Adresser.less
+++ b/src/pages/forside/sections/4-personinfo/3-adresser/Adresser.less
@@ -45,7 +45,7 @@
     }
   }
   &__knapper {
-    margin: 1rem 0 1.5rem 0;
+    padding: 1rem 0 1.5rem 0;
     display: flex;
   }
   &__knapp:last-child {
