--- a/src/pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/telefonnummer/Telefonnummer.less
+++ b/src/pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/telefonnummer/Telefonnummer.less
@@ -27,7 +27,7 @@
     align-items: center;
   }
   &__form {
-    margin-top: 0.5rem;
+    margin: 0.5rem 0;
   }
   &__verdi {
     @media @maxMobile {
