--- a/src/components/kilde/Kilde.less
+++ b/src/components/kilde/Kilde.less
@@ -1,7 +1,7 @@
 .kilde {
   &__lenke {
     display: flex;
-    width: fit-content;
+    width: max-content;
     align-items: center;
     margin: 1rem 0;
     border: 0;
