Støtt sletting av gateadresse, postboksadresse og stedsadresse

--- a/src/components/kilde/Kilde.less
+++ b/src/components/kilde/Kilde.less
@@ -6,6 +6,9 @@
     margin: 1rem 0;
     border: 0;
     padding-left: 0;
+    &:first-child {
+      margin-right: 1rem;
+    }
   }
   &__icon {
     margin-right: 0.5rem;
