--- a/src/pages/forside/sections/4-personinfo/3-adresser/Adresser.less
+++ b/src/pages/forside/sections/4-personinfo/3-adresser/Adresser.less
@@ -44,7 +44,21 @@
       width: 50%;
     }
   }
-  &__knapper {
+  &__modal-knapper {
+    display: flex;
+    margin-top: 2rem;
+    justify-content: center;
+    > *:first-child {
+      margin-right: 0.25rem;
+    }
+    > *:last-child {
+      margin-left: 0.25rem;
+    }
+  }
+  &__endre-knapper {
+    display: flex;
+  }
+  &__form-knapper {
     padding: 1rem 0;
     display: flex;
   }
