--- a/src/components/felter/select/NAVSelect.less
+++ b/src/components/felter/select/NAVSelect.less
@@ -41,15 +41,12 @@
       margin-right: 5px;
     }
   }
+  &__option-border {
+    border-bottom: 1px solid #979797;
+  }
   &__menu {
     @media @minDesktop {
       min-width: 305px;
     }
-  }
-}
-
-.KodeverkSelect__borderUnderFirst {
-  .KodeverkSelect__option:first-child {
-    border-bottom: 1px solid #979797;
   }
 }
