--- a/src/components/knapper/Redirect.less
+++ b/src/components/knapper/Redirect.less
@@ -13,10 +13,12 @@
   &__wrapper {
     width: 100%;
     display: flex;
-    max-width: 800px;
+    max-width: 768px;
     height: 100%;
-    border: 2px solid #c6c2bf;
-    background-color: white;
+    border-style: solid;
+    border-color: #c6c2bf;
+    border-width: 2px 2px 0 2px;
+    background-color: rgba(255, 255, 255, 1);
     justify-content: center;
     align-items: center;
   }
