--- a/src/components/knapper/Redirect.less
+++ b/src/components/knapper/Redirect.less
@@ -1,29 +1,51 @@
 .redirect {
   &__container {
+    display: flex;
     position: fixed;
     bottom: 0;
     left: 0;
     z-index: 9999;
     width: 100%;
-    height: 75px;
-    display: flex;
+    height: 104px;
+    box-shadow: 0 0px 8px 4px rgba(0, 0, 0, 0.08);
+    background-color: white;
     justify-content: center;
     align-items: center;
+  }
+  &__ikon-container {
+    margin: 0 1rem;
+  }
+  &__ikon {
+    height: 3rem;
+    width: 3rem;
+  }
+
+  &__content {
+    display: flex;
+    align-content: center;
+    flex-direction: column;
+    padding-right: 2rem;
+  }
+  &__lenke {
+    display: flex;
+    align-items: center;
+    margin: 0.25rem 0;
+  }
+  &__chevron {
+    margin: 0 0.25rem 0 0;
+    display: flex;
   }
   &__wrapper {
     width: 100%;
     display: flex;
     max-width: 768px;
     height: 100%;
-    border-style: solid;
-    border-color: #c6c2bf;
-    border-width: 2px 2px 0 2px;
-    background-color: rgba(255, 255, 255, 1);
-    justify-content: center;
+    padding: 1rem 0;
     align-items: center;
-  }
-  &__wrapper:hover {
-    border: 2px solid #0067c5;
-    color: #0067c5;
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    @media @maxTablet {
+      background-image: none !important;
+    }
   }
 }
