Fjern borders på paneler

--- a/src/App.less
+++ b/src/App.less
@@ -83,6 +83,10 @@ body {
   min-height: 25px !important;
 }
 
+.nav-veilederpanel {
+  border: 0 !important;
+}
+
 .lesMerPanel__togglelink {
   flex-direction: row-reverse !important;
 }
