Legg til max-width 100% på kilde

--- a/src/components/kilde/Kilde.less
+++ b/src/components/kilde/Kilde.less
@@ -2,6 +2,7 @@
   &__lenke {
     display: flex;
     width: max-content;
+    max-width: 100%;
     align-items: center;
     margin: 1rem 0;
     border: 0;
