Legg til veileder med tekst

--- a/src/App.less
+++ b/src/App.less
@@ -79,12 +79,21 @@ body {
   }
 }
 
+/*
+  Overridden CSS
+  TODO: finn alternative løsninger
+ */
+
 .btn-auth {
   min-height: 25px !important;
 }
 
 .nav-veilederpanel {
-  border: 0 !important;
+  border: 0;
+}
+
+.nav-veilederpanel--advarsel {
+  border: 2px solid #ffd399 !important;
 }
 
 .lesMerPanel__togglelink {
