Legg til styling for veileder-panel

--- a/src/index.less
+++ b/src/index.less
@@ -52,6 +52,7 @@
 @import "components/felter/select/NAVSelect.less";
 @import "components/felter/day-picker/DayPicker.less";
 @import "components/knapper/Redirect.less";
+@import "components/veiledere/Redirect.less";
 @import "components/icon/Icon.less";
 @import "components/melding/Melding.less";
 @import "components/kilde/Kilde.less";
