--- a/src/components/knapper/Redirect.less
+++ b/src/components/knapper/Redirect.less
@@ -2,11 +2,10 @@
   &__container {
     display: flex;
     position: fixed;
-    bottom: 0;
+    top: 0;
     left: 0;
     z-index: 9999;
     width: 100%;
-    height: 104px;
     box-shadow: 0 0px 8px 4px rgba(0, 0, 0, 0.08);
     background-color: white;
     justify-content: center;
@@ -40,7 +39,7 @@
     display: flex;
     max-width: 768px;
     height: 100%;
-    padding: 1rem 0;
+    padding: 1.5rem 0;
     align-items: center;
     background-repeat: no-repeat;
     background-position: bottom right;
