--- a/src/pages/endre/EndreOpplysninger.less
+++ b/src/pages/endre/EndreOpplysninger.less
@@ -1,5 +1,17 @@
 .endreOpplysninger {
+  &__page {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    background-color: @navLysGra;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
   &__container {
-    margin: 0 0 4rem 0;
+    margin: 8rem 0 6rem 0;
   }
 }
