Endre på loading

--- a/src/App.less
+++ b/src/App.less
@@ -1,7 +1,8 @@
 @link-color: #4a90e2;
+@app-background: #efefef;
 
 body {
-  background-color: @navLysGra;
+  background-color: @app-background;
   margin: 0;
 
   .capitalize {
