--- a/src/pages/endre/EndreOpplysninger.less
+++ b/src/pages/endre/EndreOpplysninger.less
@@ -1,10 +1,10 @@
 .endreOpplysninger {
   &__page {
+    background-color: @app-background;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 9999;
-    background-color: @navLysGra;
     width: 100%;
     display: flex;
     justify-content: center;
