--- a/src/App.less
+++ b/src/App.less
@@ -80,6 +80,11 @@ body {
   }
 }
 
+.hodefot {
+  @media print {
+    display: none;
+  }
+}
 /*
   Overridden CSS
   TODO: finn alternative løsninger
