--- a/src/pages/forside/sections/6-eksterne/EksterneLenker.less
+++ b/src/pages/forside/sections/6-eksterne/EksterneLenker.less
@@ -2,6 +2,9 @@
   &__panel {
     margin: 4rem 0;
     padding: 2rem 1.5rem !important;
+    @media print {
+      display: none;
+    }
   }
   &__overskrift {
     padding: 1rem 0;
