Legg til tekster for DSOP

--- a/src/pages/dsop/Historikk.less
+++ b/src/pages/dsop/Historikk.less
@@ -18,7 +18,15 @@
     padding: 0.25rem 0;
     flex-basis: 100%;
   }
+  &__tabs-innhold {
+    @media @minMobile {
+      padding: 1rem 2rem;
+    }
+  }
   &__ingen-data {
     margin: 1rem 0;
+  }
+  &__info {
+    margin-bottom: 1rem;
   }
 }
