--- a/src/pages/detaljert-arbeidsforhold/DetaljertArbeidsforhold.less
+++ b/src/pages/detaljert-arbeidsforhold/DetaljertArbeidsforhold.less
@@ -5,7 +5,7 @@
   &__icon {
     display: flex;
     justify-content: center;
-    padding: 0 0 1rem 0;
+    padding: 1rem 0;
   }
   &__innhold {
     background: white;
