--- a/src/pages/forside/sections/6-eksterne/linkbox/LinkBox.less
+++ b/src/pages/forside/sections/6-eksterne/linkbox/LinkBox.less
@@ -20,6 +20,10 @@
     margin: 0 0 0.6rem 0;
   }
 
+  &__beskrivelse {
+    width: 100%;
+  }
+
   &__icon-container {
     padding: 0 1.5rem 0 0;
     @media @maxMobile {
