--- a/src/App.less
+++ b/src/App.less
@@ -1,5 +1,8 @@
 @link-color: #4a90e2;
-@app-background: @navLysGra;
+// Gammel dekoratør
+@app-background: #efefef;
+// Ny dekoratør
+// @app-background: @navLysGra;
 
 html,
 body {
@@ -7,7 +10,7 @@ body {
 }
 
 body {
-  // background-color: @app-background;
+  background-color: @app-background;
   margin: 0;
 
   .capitalize {
