Legg til ikon for medl

--- a/src/index.less
+++ b/src/index.less
@@ -19,6 +19,7 @@
 @import "~nav-frontend-veileder-style";
 @import "~nav-frontend-tabs-style";
 @import "~nav-frontend-hjelpetekst-style";
+@import "~nav-frontend-etiketter-style";
 @import "~nav-frontend-veilederpanel-style";
 @import "~nav-frontend-alertstriper-style";
 @import "~nav-frontend-knapper-style";
