--- a/src/pages/digital-samhandling-offentlig-privat/DsopHistorikk.less
+++ b/src/pages/digital-samhandling-offentlig-privat/DsopHistorikk.less
@@ -18,6 +18,10 @@
     padding: 0.25rem 0;
     flex-basis: 100%;
   }
+  &__vertical-centered {
+    display: flex;
+    align-items: center;
+  }
   &__tabs-innhold {
     @media @minMobile {
       padding: 1rem 2rem;
