--- a/src/index.less
+++ b/src/index.less
@@ -24,6 +24,7 @@
 @import "~nav-frontend-alertstriper-style";
 @import "~nav-frontend-knapper-style";
 @import "~nav-frontend-lenkepanel-style";
+@import "~nav-frontend-popover-style";
 
 @import "App.less";
 @import "pages/forside/sections/2-brodsmulesti/Brodsmulesti.less";
