--- a/src/App.less
+++ b/src/App.less
@@ -22,6 +22,12 @@ body {
   margin-left: 0.5rem;
 }
 
+.popover {
+  &__content-inner {
+    max-width: 415px;
+  }
+}
+
 .app {
   display: flex;
   justify-content: center;
