Pointer på infotekst

--- a/src/components/infotekst/Infotekst.less
+++ b/src/components/infotekst/Infotekst.less
@@ -1,6 +1,7 @@
 .infotekst {
   &__title-i-button {
     padding: 0 0 0 0.5rem;
+    cursor: pointer;
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
