Legg til coSelect

--- a/src/pages/forside/sections/4-personinfo/3-adresser/Adresser.less
+++ b/src/pages/forside/sections/4-personinfo/3-adresser/Adresser.less
@@ -37,6 +37,12 @@
       width: 40%;
     }
   }
+
+  &__without-label {
+    width: 100%;
+    padding-top: 30px;
+  }
+
   &__rad {
     display: flex;
     @media @maxMobile {
