--- a/src/components/felter/select/NAVSelect.less
+++ b/src/components/felter/select/NAVSelect.less
@@ -7,6 +7,14 @@
     padding: 0 0.5rem;
   }
 
+  &__margin {
+    margin-right: 0.5rem;
+  }
+
+  &__option {
+    min-height: 38px;
+  }
+
   &__control {
     border: 1px solid @navGra60 !important;
     min-height: 40px !important;
