Fiks co-dropdown

--- a/src/pages/forside/sections/4-personinfo/3-adresser/Adresser.less
+++ b/src/pages/forside/sections/4-personinfo/3-adresser/Adresser.less
@@ -40,7 +40,9 @@
 
   &__without-label {
     width: 100%;
-    padding-top: 30px;
+    @media @minMobile {
+      padding-top: 30px;
+    }
   }
 
   &__rad {
