Juster iht punkter

--- a/src/index.less
+++ b/src/index.less
@@ -45,6 +45,7 @@
 @import "pages/endre-personopplysninger/EndreOpplysninger.less";
 @import "pages/digital-samhandling-offentlig-privat/DsopHistorikk.less";
 @import "pages/digital-samhandling-offentlig-privat/DsopDetaljer.less";
+@import "pages/institusjonsopphold/Inst.less";
 @import "pages/404/404.less";
 
 @import "components/box/Box.less";
