Fiks mobil-wrapper

--- a/src/App.less
+++ b/src/App.less
@@ -85,7 +85,10 @@ body {
 .pagecontent {
   width: 100%;
   max-width: 800px;
-  padding: 0 1em;
+}
+
+.wrapper {
+  padding: 0 0.5em;
 }
 
 .spinner-wrapper {
