--- a/src/index.less
+++ b/src/index.less
@@ -44,6 +44,7 @@
 @import "pages/endre-personopplysninger/EndreOpplysninger.less";
 @import "pages/digital-samhandling-offentlig-privat/DsopHistorikk.less";
 @import "pages/digital-samhandling-offentlig-privat/DsopDetaljer.less";
+@import "pages/medlemskap-i-folketrygden/MedlHistorikk.less";
 @import "pages/institusjonsopphold/Inst.less";
 @import "pages/404/404.less";
 
