Legg inn ikoner og tekster

--- a/src/pages/medlemskap-i-folketrygden/MedlHistorikk.less
+++ b/src/pages/medlemskap-i-folketrygden/MedlHistorikk.less
@@ -1,11 +1,28 @@
-.medl-historikk {
+.medl {
   &__flex-table {
     max-width: 100%;
     border-collapse: collapse;
     margin-top: 1rem;
   }
+  &__heading {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
   &__space {
     margin: 1rem 0;
+  }
+  &__section {
+    margin: 3rem 0 1rem 0;
+  }
+  &__checkbox {
+    display: flex;
+    flex-direction: row;
+  }
+  &__kalender {
+    width: 25px;
+    height: 25px;
+    margin-right: 0.5rem;
   }
   &__flex-rad {
     border-top: 1px solid #979797;
