--- a/src/index.less
+++ b/src/index.less
@@ -59,3 +59,4 @@
 @import "components/error/Error.less";
 @import "components/meny/Meny.less";
 @import "components/infotekst/Infotekst.less";
+@import "components/listelement/ListElement.less";
