Fiks capital case

--- a/src/pages/medlemskap-i-folketrygden/MedlHistorikk.less
+++ b/src/pages/medlemskap-i-folketrygden/MedlHistorikk.less
@@ -53,4 +53,10 @@
   &__info {
     margin-bottom: 1rem;
   }
+  &__land {
+    text-transform: lowercase;
+    &:first-letter {
+      text-transform: uppercase;
+    }
+  }
 }
