Fiks bredde på sjekkbokser

--- a/src/pages/medlemskap-i-folketrygden/MedlHistorikk.less
+++ b/src/pages/medlemskap-i-folketrygden/MedlHistorikk.less
@@ -20,7 +20,7 @@
     flex-direction: row;
   }
   &__kalender {
-    width: 25px;
+    min-width: 25px;
     height: 25px;
     margin-right: 0.5rem;
   }
