Benytt bakgrunnsfarge fra design-systemet

--- a/src/App.less
+++ b/src/App.less
@@ -1,8 +1,4 @@
 @link-color: #4a90e2;
-// Gammel dekoratør
-@app-background: #efefef;
-// Ny dekoratør
-// @app-background: @navLysGra;
 
 html,
 body {
@@ -10,7 +6,7 @@ body {
 }
 
 body {
-  background-color: @app-background;
+  background-color: @navGraBakgrunn;
   margin: 0;
 
   .capitalize {
