--- a/src/index.less
+++ b/src/index.less
@@ -5,6 +5,7 @@
 @maxMobile: ~"all and (max-width: 420px)";
 @minMobile: ~"all and (min-width: 420px)";
 
+@import (reference) "~nav-frontend-core/less/_variabler";
 @import (less) "~react-day-picker/lib/style.css";
 @import "~nav-frontend-spinner-style";
 @import "~nav-frontend-typografi-style";
