Skriver om håndtering av redirects tilbake til andre tjenester

--- a/src/index.less
+++ b/src/index.less
@@ -61,3 +61,4 @@
 @import "components/meny/Meny.less";
 @import "components/infotekst/Infotekst.less";
 @import "components/listelement/ListElement.less";
+@import "components/spinner/Spinner.less";
