Komponent for lenke til hash

--- a/src/index.less
+++ b/src/index.less
@@ -62,3 +62,4 @@
 @import "components/infotekst/Infotekst.less";
 @import "components/listelement/ListElement.less";
 @import "components/spinner/Spinner.less";
+@import "components/anchorlink/AnchorLink.less";
