--- a/src/pages/forside/sections/6-flere-opplysninger/Lenker.less
+++ b/src/pages/forside/sections/6-flere-opplysninger/Lenker.less
@@ -10,7 +10,7 @@
     padding: 1rem 0;
   }
   &__info {
-    margin-bottom: 1rem;
+    margin: 1rem 0;
   }
   &__content {
     @media @minDesktop {
