Migrerer fra VeilederPanel til GuidePanel

--- a/src/components/box/Box.less
+++ b/src/components/box/Box.less
@@ -1,14 +1,20 @@
-.nav-veileder__frame {
-  background: transparent !important;
-}
-
 .box {
   &__wrapper {
     padding-top: 1rem;
     page-break-after: always;
-  }
 
-  &__wrapper:after {
+    .navds-guide-panel--poster .navds-guide {
+      top: 0.75rem;
+    }
+
+    .navds-guide-panel__content {
+      border: none;
+    }
+
+    .navds-guide__illustration.navds-guide__illustration--medium {
+      width: 4.5rem;
+      height: 4.5rem;
+    }
   }
 
   &__title {
@@ -51,10 +57,6 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-  }
-
-  &__ikon {
-    width: 72.5% !important;
   }
 
   &__title-i-icon {
