Migrerer Chevron til Back, Next, Collapse eller Expand-ikoner

--- a/src/components/felter/select/NAVSelect.less
+++ b/src/components/felter/select/NAVSelect.less
@@ -4,7 +4,12 @@
   }
 
   &__dropdown-indicator {
-    padding: 0 0.5rem;
+    padding: 0.4rem 0.5rem 0 0.5rem;
+
+    svg {
+      width: 1.5rem;
+      height: 1.5rem;
+    }
   }
 
   &__margin {
