Migrerer Modal og LesMerpanel til Modal og ReadMore

--- a/src/pages/forside/sections/4-personinfo/3-adresser/Adresser.less
+++ b/src/pages/forside/sections/4-personinfo/3-adresser/Adresser.less
@@ -12,6 +12,12 @@
       .lesMerPanel__toggle {
         justify-content: flex-start;
       }
+
+      .navds-read-more__content {
+        padding: 0;
+        margin: 0;
+        border: 0;
+      }
     }
   }
   &__tittel {
