Fjerner siste styling-pakker fra gammelt designsystem

--- a/src/components/felter/select/NAVSelect.less
+++ b/src/components/felter/select/NAVSelect.less
@@ -1,6 +1,9 @@
 .KodeverkSelect {
+  margin-bottom: 1.5rem;
+
   &__header {
     display: flex;
+    min-height: 2rem;
   }
 
   &__dropdown-indicator {
@@ -22,7 +25,7 @@
 
   &__control {
     border: 1px solid var(--navds-global-color-gray-600) !important;
-    min-height: 40px !important;
+    min-height: 50px !important;
 
     &-feil {
       .KodeverkSelect {
