Korrigerer fokus for bilder og setter tom alt for presentasjonsbilder

--- a/src/App.less
+++ b/src/App.less
@@ -6,7 +6,7 @@ body {
 }
 
 body {
-  background-color: var(--navds-semantic-color-canvas-background);
+  background-color: var(--a-bg-default);
   margin: 0;
 
   .capitalize {
