--- a/src/components/kilde/Kilde.less
+++ b/src/components/kilde/Kilde.less
@@ -22,7 +22,7 @@
   }
   &__tekst {
     padding: 0.5rem 0;
-    color: var(--navds-color-gray-900);
+    color: var(--a-gray-900);
     text-transform: uppercase;
   }
   &__knapp.navds-button {
