--- a/src/components/felter/select/NAVSelect.less
+++ b/src/components/felter/select/NAVSelect.less
@@ -24,33 +24,33 @@
   }
 
   &__control {
-    border: 1px solid var(--navds-global-color-gray-600) !important;
+    border: 1px solid var(--a-gray-600) !important;
     min-height: 50px !important;
 
     &-feil {
       .KodeverkSelect {
         &__control {
-          background-color: var(--navds-global-color-red-100) !important;
-          border-color: var(--navds-semantic-color-interaction-danger);
+          background-color: var(--a-red-100) !important;
+          border-color: var(--a-surface-danger);
         }
       }
     }
 
     &:hover {
-      border-color: var(--navds-semantic-color-border) !important;
+      border-color: var(--a-border-default) !important;
       transition: border-color 200ms cubic-bezier(0.465, 0.183, 0.153, 0.946);
     }
 
     &--is-focused {
-      box-shadow: 0 0 0 3px var(--navds-global-color-focus);
+      box-shadow: 0 0 0 3px var(--a-border-focus);
     }
 
     &--is-disabled {
-      background-color: var(--navds-color-gray-900);
+      background-color: var(--a-gray-900);
     }
 
     &__single-value {
-      color: var(--navds-color-gray-900);
+      color: var(--a-gray-900);
     }
 
     &__spinner {
