Korrigerer bredde på landkodeselector

--- a/src/pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/telefonnummer/Telefonnummer.less
+++ b/src/pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/telefonnummer/Telefonnummer.less
@@ -53,6 +53,9 @@
       margin-right: 0.5rem;
     }
   }
+  &__inputLandkode {
+    width: 8rem;
+  }
   &__knapper {
     display: flex;
     margin-top: 1rem;
@@ -67,5 +70,8 @@
   }
   &__chevron {
     margin: 0.5rem 0;
+  }
+  &__landkode {
+    width: 10rem;
   }
 }
