Korrigerer styling for feilmelding på NAVSelect

--- a/src/components/felter/select/NAVSelect.less
+++ b/src/components/felter/select/NAVSelect.less
@@ -65,4 +65,15 @@
       min-width: 305px;
     }
   }
+  &__feilmelding,
+  &__feilmelding.navds-label {
+    display: flex;
+    gap: var(--a-spacing-2);
+    margin-top: var(--a-spacing-2);
+    color: var(--ac-typo-error-text, var(--a-text-danger));
+
+    &::before {
+      content: "•";
+    }
+  }
 }
