Fikser lenker som ikke havner inline med avsluttende tekst

--- a/src/pages/forside/sections/3-header/Header.less
+++ b/src/pages/forside/sections/3-header/Header.less
@@ -13,6 +13,9 @@
   &__content {
     margin-bottom: 0.5rem;
   }
+  &__link.navds-link {
+    display: inline;
+  }
   @media print {
     display: none;
   }
