--- a/src/pages/forside/sections/7-mer-informasjon/MerInformasjon.less
+++ b/src/pages/forside/sections/7-mer-informasjon/MerInformasjon.less
@@ -8,6 +8,10 @@
     }
     display: flex;
     flex-direction: column;
+
+    .navds-link {
+      display: inline;
+    }
   }
 
   &__enkeltpanel {
