Fikser diverse stylingfeil i linkbox og knapper

--- a/src/pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/telefonnummer/Telefonnummer.less
+++ b/src/pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/telefonnummer/Telefonnummer.less
@@ -60,6 +60,9 @@
     display: flex;
     margin-top: 1rem;
   }
+  &__knapp:last-child {
+    margin-left: 0.5rem;
+  }
   &__knapp-ikon,
   &__knapp-tekst {
     display: flex;
