--- a/src/pages/forside/sections/6-flere-opplysninger/linkbox/LinkBox.less
+++ b/src/pages/forside/sections/6-flere-opplysninger/linkbox/LinkBox.less
@@ -36,6 +36,11 @@
     align-items: center;
   }
 
+  &__lenke {
+    color: var(--a-surface-action);
+    text-decoration: underline;
+  }
+
   &__next {
     width: 1.5rem;
     height: 1.5rem;
