Endrer til korrekt bakgrunnsfarge

--- a/src/App.less
+++ b/src/App.less
@@ -6,7 +6,7 @@ body {
 }
 
 body {
-  background-color: var(--a-bg-default);
+  background-color: var(--a-bg-subtle);
   margin: 0;
 
   .capitalize {
