Fikser issues etter codereview

--- a/src/App.less
+++ b/src/App.less
@@ -61,6 +61,7 @@ body {
 }
 
 .knapp-med-ikon {
+  // Aligner ikon korrekt når de ligger i Button-komponent.
   justify-content: center;
   align-items: center;
 
