--- a/src/index.less
+++ b/src/index.less
@@ -32,6 +32,7 @@
 @import "components/box/Box.less";
 @import "components/felter/input-med-hjelpetekst/InputMedHjelpetekst.less";
 @import "components/felter/input-postnummer/InputPostnummer.less";
+@import "components/felter/label-med-hjelpetekst/LabelMedHjelpetekst.less";
 @import "components/felter/select/NAVSelect.less";
 @import "components/knapper/Redirect.less";
 @import "components/icon/Icon.less";
