--- a/src/components/felter/input-med-hjelpetekst/InputMedHjelpetekst.less
+++ b/src/components/felter/input-med-hjelpetekst/InputMedHjelpetekst.less
@@ -1,3 +1,14 @@
 .skjemaelement {
   margin-bottom: 1.5rem;
 }
+
+.ekf {
+  &__header {
+    display: flex;
+  }
+
+  &__input .skjemaelement__label {
+    display: none;
+  }
+}
+
