Fikset labels på adresselinjer

--- a/src/index.less
+++ b/src/index.less
@@ -15,6 +15,7 @@
 @import "pages/forside/sections/4-personinfo/3-adresser/Adresser.less";
 @import "pages/forside/sections/4-personinfo/5-ditt-nav-kontor/apningstid/Apningstid.less";
 @import "pages/forside/sections/4-personinfo/5-ditt-nav-kontor/DittNavKontor.less";
+@import "pages/forside/sections/4-personinfo/4-utbetalinger/endring/utenlandsk-bankkonto/felter/AdresseFields";
 @import "pages/forside/sections/4-personinfo/4-utbetalinger/Utbetalinger.less";
 @import "pages/forside/sections/5-arbeidsforhold/Arbeidsforhold.less";
 @import "pages/forside/sections/6-flere-opplysninger/Lenker.less";
