Fikset label på bankkode-felt

--- a/src/pages/forside/sections/4-personinfo/4-utbetalinger/Utbetalinger.less
+++ b/src/pages/forside/sections/4-personinfo/4-utbetalinger/Utbetalinger.less
@@ -58,6 +58,7 @@
   &__bankkode {
     &-rad {
       display: flex;
+      margin-bottom: 1.5rem;
     }
     &-kolonne:first-child {
       max-width: 4rem;
@@ -65,7 +66,10 @@
     }
     &-kolonne:last-child {
       width: 100%;
-      margin-top: 1.9rem;
+
+      .navds-form-field {
+        gap: 0;
+      }
     }
   }
 }
