Fikser flex for ListElement med CustomHelpText

--- a/src/components/listelement/ListElement.less
+++ b/src/components/listelement/ListElement.less
@@ -1,6 +1,4 @@
-.listelement {
-  dt {
-    display: flex;
-    align-items: center;
-  }
+.list-element-heading {
+  display: flex;
+  align-items: center;
 }
