--- a/src/pages/forside/sections/4-personinfo/5-ditt-nav-kontor/apningstider/Apningstider.less
+++ b/src/pages/forside/sections/4-personinfo/5-ditt-nav-kontor/apningstider/Apningstider.less
@@ -7,6 +7,7 @@
     width: 100%;
     border-collapse: collapse;
     border-bottom: @apningstiderBorder;
+    margin-bottom: 2rem;
   }
 
   &__caption {
