--- a/src/index.less
+++ b/src/index.less
@@ -10,6 +10,7 @@
 @import "pages/forside/sections/4-personinfo/1-personalia/Personalia.less";
 @import "pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/kontakt-og-reservasjonsregisteret/DKIF.less";
 @import "pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/telefonnummer/Telefonnummer.less";
+@import "pages/forside/sections/4-personinfo/2-kontaktinfo/KontaktInfo.less";
 @import "pages/forside/sections/4-personinfo/3-adresser/Adresser.less";
 @import "pages/forside/sections/4-personinfo/5-ditt-nav-kontor/apningstider/Apningstider.less";
 @import "pages/forside/sections/4-personinfo/5-ditt-nav-kontor/DittNavKontor.less";
