Noen språklige endringer og lagt til ekstra linje over landkode og tlf.nr

--- a/src/pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/telefonnummer/Telefonnummer.less
+++ b/src/pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/telefonnummer/Telefonnummer.less
@@ -43,6 +43,7 @@
   &__input-container {
     display: flex;
     flex-wrap: wrap;
+    margin-top: 1rem;
   }
   &__alert {
     margin-top: 0.5rem;
