--- a/src/pages/detaljert-arbeidsforhold/DetaljertArbeidsforhold.less
+++ b/src/pages/detaljert-arbeidsforhold/DetaljertArbeidsforhold.less
@@ -1,29 +1,34 @@
 .da {
-  &__container {
-    width: 100%;
-  }
-  &__icon {
-    display: flex;
-    justify-content: center;
-    padding: 1rem 0;
-  }
-  &__innhold {
-    background: white;
-    padding: 2rem !important;
-    margin: 2rem 0;
-  }
-  &__rad {
-    display: flex;
-    justify-content: space-between;
-    align-content: baseline;
-  }
-  &__filler,
-  &__back {
-    width: 100px;
-    display: flex;
-    align-items: flex-end;
-  }
-  &__overskrift {
-    text-align: center;
-  }
+    &__container {
+        width: 100%;
+    }
+    &__icon {
+        display: flex;
+        justify-content: center;
+        padding: 1rem 0;
+    }
+    &__innhold {
+        background: white;
+        padding: 2rem !important;
+        margin: 2rem 0;
+    }
+    &__rad {
+        display: flex;
+        justify-content: space-between;
+        align-content: baseline;
+    }
+    &__filler,
+    &__back {
+        width: 100px;
+        display: flex;
+        align-items: flex-end;
+
+        a {
+            display: flex;
+            align-items: center;
+        }
+    }
+    &__overskrift {
+        text-align: center;
+    }
 }
