Migrerer ikoner til @navikt/aksel-icons og fjerner lokale ikoner

--- a/src/pages/detaljert-arbeidsforhold/DetaljertArbeidsforhold.less
+++ b/src/pages/detaljert-arbeidsforhold/DetaljertArbeidsforhold.less
@@ -28,6 +28,10 @@
             align-items: center;
         }
     }
+    &__back-icon {
+        width: 1.5rem;
+        height: 1.5rem;
+    }
     &__overskrift {
         text-align: center;
     }
