--- a/src/components/anchorlink/AnchorLink.less
+++ b/src/components/anchorlink/AnchorLink.less
@@ -1,11 +1,16 @@
 .anchor-link {
-  display: flex;
-  align-items: center;
-  white-space: nowrap;
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
 
-  img {
-    width: 1.25rem;
-    height: 1.25rem;
-    margin-right: 0.5rem;
-  }
+    &__icon {
+        width: 1.5rem;
+        height: 1.5rem;
+    }
+
+    img {
+        width: 1.25rem;
+        height: 1.25rem;
+        margin-right: 0.5rem;
+    }
 }
